--- a/games/wbml/assets/model.yaml
+++ b/games/wbml/assets/model.yaml
@@ -34,6 +34,17 @@ trunk2:
          -1, 6, 5, -1, -1, 9,5, -1,
          -1, 6, 5, 7, 4, 8, 4, 9, 4, -1,
          -1, 6, 3, 7, 3, 8, 3, 9, 3, -1]
+textbg:
+  type: model.tiled
+  tex: gfx/wbml.png
+  img_tile_size: [8, 8]
+  tile_size: [8,8]
+  size: [22, 5]
+  data: [22,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,23,8,24,8,
+         22,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,24,7,
+         22,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,24,7,
+         22,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,23,7,24,7,
+         22,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,23,6,24,6]
 a1:
   type: model.tiled
   tex: gfx/wbml.png
