--- a/games/wbml/assets/model.yaml
+++ b/games/wbml/assets/model.yaml
@@ -20,6 +20,7 @@ trunk:
   type: model.tiled
   tex: gfx/wbml.png
   img_tile_size: [16, 16]
+  tile_size: [16, 16]
   size: [6,4]
   data: [5, 6, 6, 6, -1, -1, 9, 6, 10, 6,
          -1, 6, 5, -1, -1, 9,5, -1,
