--- a/games/wbml/text/eng/text.yaml
+++ b/games/wbml/text/eng/text.yaml
@@ -1,6 +1,5 @@
 msg:
-  1: "This deep swampy moat is patrolled by vicious serpents."
-  2: "You are standing outside King Edward's castle, which is surrounded by a serpent-filled moat."
-  3: "The portcullis is the only entrance to the King's\ncastle."
-  4: "These beautiful urns adorn the front of the\ncastle."
-  5: "There's not much to do there."
+  1: "Oh! Fighter listen!"
+  2: "Our country depends on you."
+  3: "Defeat DRAGON, and let's regain peace."
+  4: "Get this sword and pill."
