--- a/games/wbml/assets/model.yaml
+++ b/games/wbml/assets/model.yaml
@@ -14,6 +14,7 @@ arrow:
   type: model.tiled
   tex: gfx/wbml.png
   img_tile_size: [16, 16]
+  tile_size: [16,16]
   size: [1,1]
   data: [3,3]
 trunk:
@@ -64,4 +65,3 @@ a1:
     0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15,
     0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15,
     0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15]
-
