--- a/games/wbml/assets/model.yaml
+++ b/games/wbml/assets/model.yaml
@@ -65,3 +65,36 @@ a1:
     0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15,
     0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15,
     0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15]
+a2:
+  type: model.tiled
+  tex: gfx/wbml.png
+  img_tile_size: [8,8]
+  tile_size: [8,8]
+  size: [24, 24]
+  data: [
+    4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23,
+    5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23,
+    4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23,
+    5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23,
+    4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23,
+    5, 23, 4, 23, 5, 23, 4, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 25, 4, 23, 5, 23, 4, 23,
+    4, 23, 5, 23, 4, 23, 5, 22, 4, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 5, 22, 4, 24, 5, 24, 5, 23, 4, 23, 5, 23,
+    5, 23, 4, 23, 5, 23, 5, 22, 5, 22, 3, 23, 3, 23, 3, 23, 4, 21, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, -2, 4, 21, 3, 23, 3, 23, 3, 23, -2, 5, 24, 5, 24, 4, 23, 5, 23, 4, 23,
+    4, 23, 5, 23, 4, 23, 5, 22, 5, 22, 3, 24, 3, 24, 3, 22, 3, 25, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, 5, 21, 3, 24, 3, 24, 3, 24, -2, 5, 24, 5, 24, 5, 23, 4, 23, 5, 23,
+    5, 23, 4, 23, 5, 23, 5, 22, 5, 22, 3, 23, 3, 23, 3, 21, 4, 21, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, -2, 4, 21, 3, 23, 3, 23, 3, 23, -2, 5, 24, 5, 24, 4, 23, 5, 23, 4, 23,
+    4, 23, 5, 23, 4, 23, 5, 22, 5, 22, 3, 24, 3, 24, 3, 24, 3, 25, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, 5, 21, 3, 24, 3, 22, 3, 24, -2, 5, 24, 5, 24, 5, 23, 4, 23, 5, 23,
+    5, 23, 4, 23, 5, 23, 5, 22, 5, 22, 3, 23, 3, 23, 3, 23, 4, 21, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, -2, 4, 21, 3, 23, 3, 21, 3, 23, -2, 5, 24, 5, 24, 4, 23, 5, 23, 4, 23,
+    4, 23, 5, 23, 4, 23, 5, 22, 5, 22, 3, 24, 3, 22, 3, 24, 3, 25, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, 5, 21, 3, 24, 3, 24, 3, 24, -2, 5, 24, 5, 24, 5, 23, 4, 23, 5, 23,
+    5, 23, 4, 23, 5, 23, 5, 22, 5, 22, 3, 23, 3, 21, 3, 23, 4, 21, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, 3, 23, -2, 4, 21, 3, 23, 3, 23, 3, 23, -2, 5, 24, 5, 24, 4, 23, 5, 23, 4, 23,
+    4, 23, 5, 23, 4, 23, 6, 23, 7, 23, 7, 23, 7, 23, 7, 23, 7, 23, 7, 23, 7, 23, 7, 23, 7, 23, 7, 23, 7, 23, 7, 23, 7, 23, 7, 23, 7, 23, 7, 23, 8, 23, 5, 23, 4, 23, 5, 23,
+    5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23,
+    4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23,
+    5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23,
+    4, 23, 5, 23, 4, 23, 4, 25, 4, 25, 4, 25, 4, 25, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 25, 4, 25, 4, 25, 4, 25, 4, 23, 5, 23,
+    5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23,
+    4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23,
+    5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23,
+    4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23,
+    5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23, 5, 23, 4, 23,
+
+  ]
